# schoolsoft-calendar-helper

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  package-lock.json  package.json  schoolsoft.config.example.json  server.js
.github/workflows/: ci.yml  desktop-smoke.yml  pages.yml  release.yml
docs/: DESKTOP_PACKAGING_PLAN.md  TAURI_STEP.md
docs-site/: index.html  install.js  site.css
public/: app-polish.css  app.js  empty-sync-state.js  index.html  layout-lock.css  manual-sync-only.js  privacy-gate.js  styles.css  sync-progress.js  ui-fixes.js
scripts/: browser-login.js  build-sidecar.js  check.js  desktop-sidecar-router.cjs  desktop-sidecar.cjs  desktop-sidecar.js  ensure-tauri-icon.js  extract.js  login.js  manual-capture.js
scripts/shared/: browser.js  config.js  ics.js  network-capture.js  parse.js  schoolsoft-navigation.js  scrape.js  storage.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
